@@ -1,8 +1,12 @@
 
 <h2>Conclusion</h2>
 
-<p align=right>
-We've put a lot of effort into printing nice music.  Thanks to all
-that hard work, you can <a href="@DEPTH@/switch/tour.html">use the
-program to print nice music too</a>.
+We've shown you what engraved music should look like, and how we built
+our software to emulate that look.  We have put a lot of effort into
+building it.  Thanks to all that hard work, you can <a
+href="@DEPTH@/switch/tour.html">use the program to print nice music
+too</a>.
 
+
+<p align=right>
+Go <a href=index.html>back</a> to the index.
