@@ -1,4 +1,3 @@
-
 <h1>Thank Yous</h1>
 
 Thanks to all <a
@@ -8,7 +7,7 @@ out to
 
 
 <ul>
-<li> Chris Sawer, for running the Mutopia archive
+<li> David Chan and Chris Sawer, for running the Mutopia archive
 <li> Mats Bengtsson and Graham Percival  for tirelessly answering
 questions
 <li> Paul Roberts and James Ingram, for music engraving tips
