@@ -1,6 +1,4 @@
 [
  ('participating', 'Participate'),
  ('packaging.html', 'Packaging'),
- ('notation', 'Music notation'),
- ('misc' ,'Miscellaneous bits'),
  ]
