@@ -1,4 +1,4 @@
-[('accidentals.html', "accidentals"),
+[
  ("appogiatura.html", "appogiatura"),
  ("bassocontinuo.html", "Basso Continuo"),
  ("colors.html", "Color"),
