@@ -10,6 +10,11 @@ Documentation for
 
 <li>
 Documentation for
+<a href="http://lilypond.org/doc/v1.9/Documentation/out-www/">
+<b>LilyPond 1.9</b></a> (latest development)
+
+<li>
+Documentation for
 <a href="http://lilypond.org/doc/v1.6/Documentation/out-www/">
 <font size=+0>
 <b>LilyPond 1.6</b></font></a>
