@@ -53,28 +53,46 @@ href="about/automated-engraving/">our essay...</a></p> </td>
 <td width="55%">
 <dl>
   <dt>
-    August 7, 2003
+    August 26, 2003
+  </dt>
+  <dd>
+  LilyPond 1.9.1 is released. Read the
+  <a href="http://lilypond.org/doc/v1.9/Documentation/topdocs/out-www/NEWS.html">
+  release notes</a> and get it
+    <a href="download#1.9">here</a>.
+  </dd>
+  
+  <dt>
+    August 25, 2003
+  </dt>
+  <dd>
+  The  LilyPond 1.9 development release is available. Read the
+  <a href="http://lilypond.org/doc/v1.9/Documentation/topdocs/out-www/NEWS.html">
+  release notes</a> and get it
+    <a href="download#1.9">here</a>.
+  </dd>
+
+  
+  <dt>
+    August 25, 2003
+  </dt>
+  <dd>
+    Mandrake 9.1 RPMS available, get them
+<a href="http://rpm.nyvalls.se/sound9.1.html">here</a>.
+  </dd>
+  
+  <dt>
+    August 21, 2003
   </dt>
   <dd>
 
-  LilyPond 1.8 is released.  Read <a
-href="http://lilypond.org/doc/v1.8/Documentation/topdocs/out-www/NEWS.html">the
-release notes</a> and get it <a href="download/">here</a>.  
+  LilyPond 1.8.1 was released. Get it <a href="download/">here</a>, or
+  read the <a href="http://savannah.gnu.org/cgi-bin/viewcvs/lilypond/lilypond/ChangeLog?rev=1.1258.2.1&only_with_tag=lilypond_1_8&content-type=text/vnd.viewcvs-markup">ChangeLog</a>.
+</dd>
+
+
     
-  </dd>
-  <dt>
-    August 7, 2003
-  </dt>
-  <dd>
-    New website went live!
-  </dd>
-  <dt>
-    August 6, 2003
-  </dt>
-  <dd>
-    Announced new website.
-  </dd>
-  </dl>
+</dl>
 <p align=right><a href="old-news.html">older news...</a></p>
 
 </td>
@@ -94,9 +112,17 @@ release notes</a> and get it <a href="download/">here</a>.
 
 <tr>
 <td>Stable</td>
-<td>1.8.0</td>
+<td>1.8.1</td>
 <td><a href=http://lilypond.org/doc/v1.8/Documentation/out-www/>Documentation</a>,
 <a href=download/#1.8>download</a>.
+</td>
+</tr>
+
+<tr>
+<td>Development</td>
+<td>1.9.1</td>
+<td><a href=http://lilypond.org/doc/v1.9/Documentation/out-www/>Documentation</a>,
+<a href=download/#1.9>download</a>.
 </td>
 </tr>
 
